2015-08-18  Andy Buckley  <andy.buckley@cern.ch>

	* Tweaks to ipol file parsing functions.

	* Fix a bug in IpolBin's use of interpolated errors.

	* Convert mean and median error parameterisation to use new 0th order ipols.

2015-08-15  Holger Schulz  <holger.schulz@durham.ac.uk>

	* A first version of catching singular matrices in the SVD

	* Ipol has 1 additional argument, "threshold", that determines what
	singular values are considered 0, fully propagated to pyext

	* Going 2 Pro 2 Fessional

	* Some startup checks of prof- scripts

	* remove bin/prof-sampling, rename prof-prediction -> prof-predict

2015-08-13  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Reverted unintended commit of hack.

	* Added very basic prof-config script to bin

	* Update PATH when sourcing setup.sh

2015-08-12  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Added prof-prediction which reads in a ifile and a point in
	parameter space (either a text file, a comma separated list or just
	the args) and writes out an ipolhisto. Tested to work.

2015-08-03  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Added 0-order polynomials, i.e. constant values.
	Currently, the coefficent is simply the value of
	the first anochorpoint.

2015-07-15  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Some pull plotting functionality

2015-07-08  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Calculate and print G.o.f.

	* Write some meta info to results

	* Read limits, fixed params from single textfile --limits

	* Output files steered by --output

	* Remove now obsolete bin/prof-interpolate


2015-07-08  Holger Schulz  <holger.schulz@durham.ac.uk>

	* First working version of prof-tune (pyminuit, simpleGOF)

	* Multiprocessing to speed up prof-ipol (--multi)

	* prof-ipol-tabulated to write out interpolation of tabulated data

	* Minor bugfixes


2015-06-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding mean and median strategies for assigning constant ipol bin errors.
